# ai-register-machine

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  README.md  SECURITY.md  account_backup.py  config.example.json  config.simple.example.json  cpa_export.py  grok_register_ttk.py  mise.toml  proxy_rotate.py  pyproject.toml  register.sh  register_cli.py  run-register.sh  start-clash-for-grok.sh  tab_pool.py  test_account_backup.py  test_browser_fingerprint_light.py  test_browser_recycle_slot_retry.py  test_browser_reliability_fixes.py  test_bulk_supervisor_disk_first.py  test_chatgpt_error_kinds.py  test_chatgpt_protocol_steps.py  test_chatgpt_provider.py  test_cpa_chat_entitlement_gate.py  test_cpa_one_click_chain.py  test_cpa_pkce_mint.py  test_cpa_refresh_persist.py  test_cpa_remote_inject.py  test_email_providers_pool.py  test_fail_policy.py  test_gmail_imap_provider.py  test_hotmail_rest_code.py  (+10 more)
.github/: PULL_REQUEST_TEMPLATE.md
apps/: README.md
cpa_xai/: __init__.py  accounts.py  browser_confirm.py  mint.py  probe.py  schema.py  writer.py
docs/: DEVELOPED.md  LAYOUT.md
profiles/: chatgpt-cf.example.yaml  chatgpt-gmail.example.yaml  chatgpt-tinyhost.example.yaml  grok-tinyhost.example.yaml  mimo-tinyhost.example.yaml
providers/: README.md
register_core/: README.md  __init__.py  cli.py  contracts.py  pipeline.py
scripts/: _pxed_switch_tuic_smoke.sh  ab_fingerprint_light.sh  backfill_chat_stamps.py  backfill_cpa_xai_from_accounts.py  backup_registered_accounts.py  build_web_console.sh  (+10 more)
(+111 files in other folders)
