[project]
name = "grok-register"
version = "1.2.3"
description = "Grok register: signup + CPA OIDC mint + free Build chat entitlement gate (not a quota farm)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13,<3.14"
authors = [{ name = "dengyie" }]
keywords = ["grok", "xai", "register", "oidc", "cpa", "automation"]
dependencies = [
    "DrissionPage>=4.1",
    "curl_cffi>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/dengyie/grok-register"
Repository = "https://github.com/dengyie/grok-register"
Issues = "https://github.com/dengyie/grok-register/issues"
Changelog = "https://github.com/dengyie/grok-register/blob/main/CHANGELOG.md"

# application mode: uv manages deps only, no wheel build
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
